--- a/github-faves/package.json
+++ b/github-faves/package.json
@@ -8,7 +8,8 @@
     "react": "^16.5.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-scripts": "^1.1.5",
+    "start": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
